test/syntax/33-member_expression-err.c
// ======================================================================

/* member_expression -> member_expression memop var
                      | factor */

// ======================================================================

struct human {
  int age;
};

void main(void)
{
  struct human h;

  h.1 = 25;	// error: not var
}

// ======================================================================
